<resources>
    <string name="app_name">Goldmoon_Bistro</string>
    <string name="usuario">Usuario *</string>
    <string name="inicio_de_sesi_n">INICIO DE SESIÓN</string>
    <string name="contrase_a">Contraseña *</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="goldmoon_bistro">GoldMoon Bistro</string>
    <string name="registro_de_informaci_n">Registro de información</string>
    <string name="completa_los_siguientes_campos">Completa los siguientes campos</string>
    <string name="nombre_de_restaurante">Nombre de restaurante *</string>
    <string name="rubro_de_restaurante">Rubro de restaurante *</string>
    <string name="nombre_de_cliente">Nombre de cliente *</string>
    <string name="continuar">Continuar</string>
    <string name="resumen_de_pedido">Resumen de pedido</string>
    <string name="nombre_del_restaurante">Nombre del Restaurante</string>
    <string name="rubro_del_restaurante">Rubro del Restaurante</string>
    <string name="nombre_del_cliente">Nombre del Cliente</string>
    <string name="regresar">Regresar</string>
    <string name="salir">Salir</string>
    <string name="seleccione_un_platillo">Seleccione un platillo</string>
</resources>