<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/secondary">


    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="340dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio_de_sesi_n"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/primary"
                android:layout_marginTop="35dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:layout_marginTop="15dp"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:height="35dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/edtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                android:height="35dp"/>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/ingresar"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/olvidaste_tu_contrase_a"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/goldmoon_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="15dp"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/goldmoon" />

</androidx.constraintlayout.widget.ConstraintLayout>